# yarbmb

./: pyproject.toml
docs/superpowers/specs/: 2026-07-05-shanten-of-design.md
src/yarbmb/: __init__.py  shanten.py  tiles.py  ukeire.py
