[project]
name = "yarbmb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "eitaar", email = "154091730+eitaar@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mahjong>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.11.9,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pyright]
strict = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]